# buildingLimitsAPI

./: .gitignore  Procfile  README.md  app.py  build.sh  database.py  example_input.json  pyproject.toml
app/: exceptions.py  main.py
app/api/: building_limits.py  health_check.py
app/models/: db.py  dto.py
app/services/: calculation.py  database.py  utils.py
resources/: input.py  process.py  projects.py
tests/tests_integration/: test_db_operations.py
