[tool.poetry]
name = "buildingsapi"
version = "0.1.0"
description = ""
authors = ["Juliamg <julia.graham@live.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
shapely = "^2.0.6"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
geojson = "^3.1.0"
requests = "^2.32.3"
psycopg2 = "^2.9.10"
pymysql = "^1.1.1"
ujson = "^5.10.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
